--- a/.github/workflows/on_master.yml
+++ b/.github/workflows/on_master.yml
@@ -12,37 +12,24 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Install
         run: npm ci
+
       - name: Build
         run: npm run build
-      - name: Commit dist files
-        continue-on-error: true
-        run: |
-          git config --local user.email "ting.szeying@gmail.com"
-          git config --local user.name "szenius"
-          git add ./dist
-          git commit -m "build: update dist files"
-      - name: Push changes
-        continue-on-error: true
-        uses: ad-m/github-push-action@master
+
+      - name:  'Automated Version Bump'
+        id: version_bump_and_create_tag
+        uses:  rimonhanna/gh-action-bump-version@master
+
+      - name: Upload release notes
+        if: steps.version_bump_and_create_tag.outputs.TAG
+        uses: actions/create-release@v1
         with:
-          github_token: ${{ secrets.GH_ACCESS_TOKEN }}
-          force: true
-      - name: Bump version and push tag
-        id: version
-        uses: anothrNick/github-tag-action@1.35.0
+          tag_name: ${{ steps.version_bump_and_create_tag.outputs.TAG }}
+          release_name: ${{ steps.version_bump_and_create_tag.outputs.TAG }}
+          draft: false
+          prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
-          WITH_V: false
-          RELEASE_BRANCHES: master
-          DEFAULT_BUMP: patch
-          INITIAL_VERSION: 1.1.2
-      - name: Update Notion property
-        uses: ./
-        with:
-          gh-username: "szenius"
-          gh-token: ${{ secrets.GH_ACCESS_TOKEN }}
-          notion-key: ${{ secrets.NOTION_KEY }}
-          notion-property-name: "Version Tag"
-          notion-update-value: "${{ steps.version.outputs.new_tag }}"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
